# lush

./: Cargo.toml
src/: command.rs  main.rs  tokenize.rs
src/builtin/: builtin.rs  dir.rs  echo.rs  mod.rs  who.rs
tests/: tokenize.rs
