[package]
name = "lush"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
crossterm = "0.26.1"
home = "0.5.5"
path-absolutize = { version = "3.1.0", features = [ "once_cell_cache" ]}
rand = "0.8.5"
test_dir = "0.2.0"
whoami = { version = "1.4.1", features = [] }
